--- a/about.html
+++ b/about.html
@@ -123,5 +123,7 @@
 
     <!-- Linking Submit JavaScript File -->
 	<script type="module" src="submit.js"></script>
+	<script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
+    <script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js"></script>
   </body>
 </html>
