--- a/shared.html
+++ b/shared.html
@@ -97,6 +97,7 @@
     <!-- Linking Submit JavaScript File -->
 	<script type="module" src="submit.js"></script>
 	<script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js"></script>
+    	<script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js"></script>
+	<script type="module" src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js"></script>
   </body>
 </html>
