--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <ul class="navbar-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="shared.html">Shared Quotes</a></li>
-          <li><a href="about.html">Submit a Quote</a></li>
+          <li><a href="about.html">Submit Quote</a></li>
         </ul>
       </div>
     </nav>
