--- a/login.html
+++ b/login.html
@@ -31,6 +31,17 @@
   </style>
 </head>
 <body>
+  <nav class="navbar">
+      <div class="navbar-content">
+        <h1 class="navbar-title">Quotivate</h1>
+        <ul class="navbar-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="shared.html">Shared Quotes</a></li>
+          <li><a href="about.html">Submit Quote</a></li>
+          <li><a href="login.html">Login</a></li>
+        </ul>
+      </div>
+    </nav>
   <h2>Login or Sign Up</h2>
 
   <form id="auth-form">
