--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="shared.html">Shared Quotes</a></li>
           <li><a href="about.html">Submit a Quote</a></li>
-	  <li><a href="login.html">Submit Quote</a></li>
+	  <li><a href="login.html">Login</a></li>
         </ul>
       </div>
     </nav>
