--- a/login.html
+++ b/login.html
@@ -114,7 +114,7 @@
       if (user) {
         status.textContent = `Logged in as: ${user.displayName || user.email}`;
         // Optional: redirect after login
-        // window.location.href = "shared.html";
+        window.location.href = "index.html";
       }
     });
   </script>
