--- a/index.html
+++ b/index.html
@@ -124,42 +124,47 @@
     </nav>
 
     <div class="container">
-      <!-- Random Quote Box -->
-      <div class="block text-center random-quote-block">
-        <h2>Random Quote</h2>
-        <div class="quote-box block__main block__front">
-          <span class="quote">
-            <i class="fas fa-2x fa-quote-left"></i>
-            <span class="text">Quote To be Displayed Here</span>
-          </span>
-          <div class="author">Author to be Displayed Here</div>
-          <a class="new-quote btn btn-default" onclick="newQuote()">New Quote</a>
-          <a class="tweet-quote btn btn-default" href="#" target="_blank">Tweet</a>
-        </div>
-        <div class="quote-box block__main block__back">
-          <span class="quote">
-            <i class="fas fa-2x fa-quote-left"></i>
-            <span class="text">Quote To be Displayed Here</span>
-          </span>
-          <div class="author">Author to be Displayed Here</div>
-          <a class="new-quote btn btn-default" onclick="newQuote()">New Quote</a>
-          <a class="tweet-quote btn btn-default" href="#" target="_blank">Tweet</a>
-        </div>
+  <div class="quote-switcher-controls" style="text-align:center; margin-bottom: 2rem;">
+    <button id="show-random-btn" class="switch-btn active">Random Quote</button>
+    <button id="show-daily-btn" class="switch-btn">Daily Quote</button>
+  </div>
+  <div id="random-quote-section" class="quote-section">
+    <div class="block-label">Random Quote</div>
+    <div class="block text-center random-quote-block" style="position:relative;">
+      <div class="quote-box block__main block__front">
+        <span class="quote">
+          <i class="fas fa-2x fa-quote-left"></i>
+          <span class="text">Quote To be Displayed Here</span>
+        </span>
+        <div class="author">Author to be Displayed Here</div>
+        <a class="new-quote btn btn-default" onclick="newQuote()">New Quote</a>
+        <a class="tweet-quote btn btn-default" href="#" target="_blank">Tweet</a>
       </div>
-
-      <!-- Daily Quote Box -->
-      <div class="block text-center daily-quote-block">
-        <h2>Daily Quote</h2>
-        <div class="quote-box block__main">
-          <span class="quote">
-            <i class="fas fa-2x fa-quote-left"></i>
-            <span class="text">Daily Quote To be Displayed Here</span>
-          </span>
-          <div class="author">Author to be Displayed Here</div>
-          <a class="tweet-quote btn btn-default" href="#" target="_blank">Tweet</a>
-        </div>
+      <div class="quote-box block__main block__back" style="display:none;">
+        <span class="quote">
+          <i class="fas fa-2x fa-quote-left"></i>
+          <span class="text">Quote To be Displayed Here</span>
+        </span>
+        <div class="author">Author to be Displayed Here</div>
+        <a class="new-quote btn btn-default" onclick="newQuote()">New Quote</a>
+        <a class="tweet-quote btn btn-default" href="#" target="_blank">Tweet</a>
       </div>
     </div>
+  </div>
+  <div id="daily-quote-section" class="quote-section" style="display:none;">
+    <div class="block-label">Daily Quote</div>
+    <div class="block text-center daily-quote-block" style="position:relative;">
+      <div class="quote-box block__main">
+        <span class="quote">
+          <i class="fas fa-2x fa-quote-left"></i>
+          <span class="text">Daily Quote To be Displayed Here</span>
+        </span>
+        <div class="author">Author to be Displayed Here</div>
+        <a class="tweet-quote btn btn-default" href="#" target="_blank">Tweet</a>
+      </div>
+    </div>
+  </div>
+</div>
   
     <!-- Linking Your JavaScript File -->
     <script src="script.js"></script>
