--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="shared.html">Shared Quotes</a></li>
           <li><a href="about.html">Submit a Quote</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
       </div>
     </nav>
