--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <!-- Linking Your CSS File -->
     <link rel="stylesheet" href="style.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
 
   
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" 
