--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
       <div class="navbar-content">
-        <h1 class="navbar-title">Quotivator</h1>
+        <h1 class="navbar-title">quotivate</h1>
         <ul class="navbar-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="shared.html">Shared Quotes</a></li>
