--- a/about.html
+++ b/about.html
@@ -71,6 +71,7 @@
 
     <!-- Linking Your CSS File -->
     <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
 
     <!-- Loading Roboto Font from Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" 
