--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="hero-section">
-    <img src="your-image.jpg" alt="Motivational" class="hero-image">
+    <img src="https://www.projectboldlife.com/images/2019/06/ways-to-stay-motivated-picture-hands.jpg" alt="Motivational" class="hero-image">
     <div class="arc"></div>
     <h1 class="hero-text">Welcome to Quotivate</h1>
   </header>
