--- a/home.html
+++ b/home.html
@@ -1,30 +1,134 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome to Quotivate</title>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="home.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quotivate | Home</title>
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet" />
+
+  <!-- External CSS for future styles -->
+  <link rel="stylesheet" href="style.css" />
+
+  <!-- Embedded CSS -->
+  <style>
+    /* Reset and base styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Rubik Bubbles', cursive;
+      background-color: #fff0f5;
+      color: #333;
+      scroll-behavior: smooth;
+    }
+
+    /* Hero Section */
+    .hero-section {
+      position: relative;
+      height: 90vh;
+      overflow: hidden;
+    }
+
+    .hero-image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .arc {
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+      width: 100%;
+      height: 100px;
+      background-color: #fff0f5;
+      border-top-left-radius: 100% 40px;
+      border-top-right-radius: 100% 40px;
+      z-index: 2;
+    }
+
+    .hero-text {
+      position: absolute;
+      bottom: 40px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 3rem;
+      color: white;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+      z-index: 3;
+      text-align: center;
+    }
+
+    /* Mission Section Fade-in */
+    .mission-section {
+      padding: 5rem 2rem;
+      text-align: center;
+      opacity: 0;
+      transform: translateY(50px);
+      transition: opacity 1s ease, transform 1s ease;
+    }
+
+    .mission-section.show {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .mission-text {
+      max-width: 700px;
+      margin: 0 auto;
+      font-size: 1.3rem;
+    }
+  </style>
 </head>
 <body>
 
+  <!-- Hero Section -->
+  <nav class="navbar">
+      <div class="navbar-content">
+        <h1 class="navbar-title">quotivate</h1>
+        <ul class="navbar-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="shared.html">Shared Quotes</a></li>
+          <li><a href="about.html">Submit a Quote</a></li>
+	  <li><a href="login.html">Login</a></li>
+        </ul>
+      </div>
+    </nav>
+
   <header class="hero-section">
-    <img src="https://www.projectboldlife.com/images/2019/06/ways-to-stay-motivated-picture-hands.jpg" alt="Motivational" class="hero-image">
+    <img src="mot.jpg" alt="Motivational Image" class="hero-image" />
     <div class="arc"></div>
     <h1 class="hero-text">Welcome to Quotivate</h1>
   </header>
 
+  <!-- Mission Section -->
   <section class="mission-section">
     <div class="mission-text">
       <h2>Our Mission</h2>
       <p>
-        We're building a social media platform that’s free from clutter, distractions, and endless doomscrolling.  
-        Quotivate is about positivity, simplicity, and meaningful connection — powered by daily quotes, not chaos.
+        We're building a social media platform that isn’t packed with distractions.
+        Quotivate is focused on positivity, creativity, and daily inspiration — not chaos.
+        Simple, motivating, and built for you.
       </p>
     </div>
   </section>
 
-  <script src="home.js"></script>
+  <!-- Scroll-triggered fade in -->
+  <script>
+    window.addEventListener('scroll', () => {
+      const mission = document.querySelector('.mission-section');
+      const triggerPoint = window.innerHeight / 1.2;
+
+      if (mission.getBoundingClientRect().top < triggerPoint) {
+        mission.classList.add('show');
+      }
+    });
+  </script>
+
 </body>
 </html>
