--- a/index.html
+++ b/index.html
@@ -131,7 +131,8 @@
       <div class="navbar-content">
         <h1 class="navbar-title">quotivate</h1>
         <ul class="navbar-links">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Quotes</a></li>
           <li><a href="shared.html">Shared Quotes</a></li>
           <li><a href="about.html">Submit a Quote</a></li>
 		  <li><a href="login.html">Login</a></li>
