--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
     </nav>
 
   <header class="hero-section">
-    <img src="mot.jpg" alt="Motivational Image" class="hero-image" />
+    <img src="home.png" alt="Motivational Image" class="hero-image" />
     <div class="arc"></div>
     <h1 class="hero-text">Welcome to Quotivate</h1>
   </header>
