--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
     </nav>
 
   <header class="hero-section">
-    <img src="home.png" alt="Motivational Image" class="hero-image" />
+    <img src="https://c1.wallpaperflare.com/preview/536/981/133/inspiration-motivation-life-inspirational.jpg" alt="Motivational Image" class="hero-image" />
     <div class="arc"></div>
     <h1 class="hero-text">Welcome to Quotivate</h1>
   </header>
