--- a/home.html
+++ b/home.html
@@ -8,10 +8,6 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap" rel="stylesheet" />
 
-  <!-- External CSS for future use -->
-  <link rel="stylesheet" href="style.css" />
-
-  <!-- Internal CSS -->
   <style>
     * {
       margin: 0;
@@ -19,11 +15,12 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
       font-family: 'Rubik Bubbles', cursive;
-      background-color: #fff0f5;
-      color: #333;
       scroll-behavior: smooth;
+      background: linear-gradient(to bottom right, #ffe0f0, #ffd9ec);
+      color: #333;
+      overflow-x: hidden;
     }
 
     .hero-section {
@@ -38,6 +35,15 @@
       justify-content: center;
     }
 
+    .hero-text {
+      font-size: 3.5rem;
+      color: #ffffff;
+      text-align: center;
+      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
+      z-index: 2;
+      padding: 1rem;
+    }
+
     .curve-up {
       position: absolute;
       bottom: 0;
@@ -47,27 +53,18 @@
     }
 
     .curve-up svg {
-      position: relative;
       display: block;
-      width: calc(100% + 1.3px);
+      width: 100%;
       height: 120px;
     }
 
-    .hero-text {
-      font-size: 3rem;
-      color: white;
-      text-align: center;
-      text-shadow: 2px 2px 5px rgba(0,0,0,0.5);
-      z-index: 2;
-    }
-
     .mission-section {
-      padding: 5rem 2rem 3rem;
+      padding: 6rem 2rem 5rem;
       text-align: center;
+      background-color: #fff0f5;
       opacity: 0;
       transform: translateY(50px);
       transition: opacity 1s ease, transform 1s ease;
-      background-color: #fff0f5;
     }
 
     .mission-section.show {
@@ -76,20 +73,37 @@
     }
 
     .mission-text {
-      max-width: 700px;
+      max-width: 750px;
       margin: 0 auto;
-      font-size: 1.3rem;
+      font-size: 1.4rem;
+      background-color: #ffeaf3;
+      padding: 2rem;
+      border-radius: 30px;
+      box-shadow: 0 10px 30px rgba(255, 182, 193, 0.3);
+    }
+
+    .mission-text h2 {
+      font-size: 2.2rem;
+      color: #ff5f99;
+      margin-bottom: 1rem;
+    }
+
+    .mission-text p {
+      font-size: 1.2rem;
+      line-height: 1.7;
+      color: #555;
     }
 
     .quotes-button {
       margin-top: 3rem;
-      padding: 1rem 2rem;
-      font-size: 1.2rem;
+      padding: 1rem 2.5rem;
+      font-size: 1.3rem;
       background-color: #ff77aa;
       border: none;
       border-radius: 50px;
       color: white;
       cursor: pointer;
+      box-shadow: 0 8px 20px rgba(255, 105, 135, 0.3);
       transition: all 0.3s ease;
       opacity: 0;
       transform: translateY(30px);
@@ -102,6 +116,8 @@
 
     .quotes-button:hover {
       background-color: #ff5f99;
+      box-shadow: 0 8px 25px rgba(255, 105, 135, 0.5);
+      transform: scale(1.05);
     }
   </style>
 </head>
@@ -123,9 +139,9 @@
     <div class="mission-text">
       <h2>Our Mission</h2>
       <p>
-        We're building a social media platform that isn’t packed with distractions.
-        Quotivate is focused on positivity, creativity, and daily inspiration — not chaos.
-        Simple, motivating, and built for you.
+        We're building a social media platform that isn’t packed with distractions.<br />
+        Quotivate is focused on positivity, creativity, and daily inspiration — not chaos.<br />
+        Simple, motivating, and built just for you 💖
       </p>
     </div>
     <button class="quotes-button" onclick="location.href='index.html'">Quotes</button>
