--- a/home.html
+++ b/home.html
@@ -19,8 +19,30 @@
       font-family: 'Rubik Bubbles', cursive;
       scroll-behavior: smooth;
       background: linear-gradient(to bottom right, #ffe0f0, #ffd9ec);
-      color: #333;
       overflow-x: hidden;
+      color: #333;
+    }
+
+    /* Floating hearts background */
+    .floating-heart {
+      position: absolute;
+      width: 20px;
+      height: 20px;
+      background-color: pink;
+      border-radius: 50%;
+      animation: floatUp 6s infinite ease-in;
+      opacity: 0.5;
+    }
+
+    @keyframes floatUp {
+      0% {
+        transform: translateY(0) scale(1);
+        opacity: 0.5;
+      }
+      100% {
+        transform: translateY(-800px) scale(1.5);
+        opacity: 0;
+      }
     }
 
     .hero-section {
@@ -33,15 +55,70 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow: hidden;
+    }
+
+    .cloud {
+      position: absolute;
+      width: 150px;
+      height: 80px;
+      background: #fff;
+      border-radius: 100px;
+      opacity: 0.3;
+      animation: moveClouds 40s linear infinite;
+    }
+
+    .cloud:before, .cloud:after {
+      content: '';
+      position: absolute;
+      background: #fff;
+      width: 100px;
+      height: 100px;
+      position: absolute;
+      border-radius: 50%;
+    }
+
+    .cloud:before {
+      top: -30px;
+      left: 10px;
+    }
+
+    .cloud:after {
+      top: -20px;
+      left: 80px;
+    }
+
+    @keyframes moveClouds {
+      0% {
+        left: -200px;
+      }
+      100% {
+        left: 100%;
+      }
     }
 
     .hero-text {
-      font-size: 3.5rem;
-      color: #ffffff;
+      font-size: 4rem;
+      color: white;
       text-align: center;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
       z-index: 2;
-      padding: 1rem;
+      padding: 2rem;
+      animation: fadeBounce 2s ease-out;
+    }
+
+    @keyframes fadeBounce {
+      0% {
+        transform: translateY(30px);
+        opacity: 0;
+      }
+      50% {
+        transform: translateY(-10px);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(0);
+      }
     }
 
     .curve-up {
@@ -64,7 +141,7 @@
       background-color: #fff0f5;
       opacity: 0;
       transform: translateY(50px);
-      transition: opacity 1s ease, transform 1s ease;
+      transition: opacity 1.2s ease, transform 1.2s ease;
     }
 
     .mission-section.show {
@@ -80,6 +157,18 @@
       padding: 2rem;
       border-radius: 30px;
       box-shadow: 0 10px 30px rgba(255, 182, 193, 0.3);
+      animation: fadeIn 2s ease-in;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     .mission-text h2 {
@@ -107,11 +196,13 @@
       transition: all 0.3s ease;
       opacity: 0;
       transform: translateY(30px);
+      position: relative;
     }
 
     .quotes-button.show {
       opacity: 1;
       transform: translateY(0);
+      animation: wiggle 2s infinite ease-in-out;
     }
 
     .quotes-button:hover {
@@ -119,15 +210,65 @@
       box-shadow: 0 8px 25px rgba(255, 105, 135, 0.5);
       transform: scale(1.05);
     }
+
+    .quotes-button::after {
+      content: "💖";
+      position: absolute;
+      right: -1.8rem;
+      top: 50%;
+      transform: translateY(-50%);
+      font-size: 1.2rem;
+    }
+
+    @keyframes wiggle {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(-3px);
+      }
+    }
+
+    /* Decorative sparkles */
+    .sparkle {
+      position: absolute;
+      font-size: 1rem;
+      color: #ffc0cb;
+      animation: twinkle 3s infinite ease-in-out;
+    }
+
+    @keyframes twinkle {
+      0%, 100% {
+        opacity: 0.3;
+        transform: scale(1);
+      }
+      50% {
+        opacity: 1;
+        transform: scale(1.3);
+      }
+    }
   </style>
 </head>
 <body>
 
+  <!-- Floating Hearts -->
+  <div class="floating-heart" style="left: 10%; animation-delay: 0s;"></div>
+  <div class="floating-heart" style="left: 25%; animation-delay: 1s;"></div>
+  <div class="floating-heart" style="left: 50%; animation-delay: 2s;"></div>
+  <div class="floating-heart" style="left: 70%; animation-delay: 3s;"></div>
+  <div class="floating-heart" style="left: 90%; animation-delay: 4s;"></div>
+
+  <!-- Decorative Sparkles -->
+  <div class="sparkle" style="top: 80px; left: 40px;">✨</div>
+  <div class="sparkle" style="top: 200px; right: 60px;">⭐</div>
+  <div class="sparkle" style="bottom: 180px; left: 100px;">🌟</div>
+
   <!-- Hero Section -->
   <header class="hero-section">
+    <div class="cloud" style="top: 50px; left: 0;"></div>
+    <div class="cloud" style="top: 120px; left: 200px;"></div>
     <h1 class="hero-text">Welcome to Quotivate</h1>
     <div class="curve-up">
-      <!-- Upward Arc using SVG -->
       <svg viewBox="0 0 1440 320">
         <path fill="#fff0f5" d="M0,288 C360,200 1080,400 1440,320 L1440,320 L0,320 Z"></path>
       </svg>
