--- a/home.html
+++ b/home.html
@@ -129,6 +129,7 @@
     }
 
     .mission-section {
+      margin-top: -10rem;
       padding: 6rem 2rem 5rem;
       text-align: center;
       background-color: #fff0f5;
