--- a/about.html
+++ b/about.html
@@ -119,8 +119,8 @@
         <form id="quote-form" class="quote-form">
           <div class="form-group">
             <label for="quote-text">Quote</label>
-            <textarea id="quote-text" class="form-control" rows="4" placeholder="Quotivate Others!" required></textarea>
-          </div>
+            <textarea id="quote-text" class="form-control" rows="4" placeholder="Quotivate Others! (login required)" required></textarea>
+          </div> 
           <button type="submit" class="btn btn-default submit-quote">Submit Quote</button>
         </form>
         <div id="success-message" class="alert alert-success hidden">Quote submitted successfully!</div>
