--- a/home.html
+++ b/home.html
@@ -41,6 +41,7 @@
       display: block;
       width: 100%;
       height: 100px;
+      margin-top: -6.5rem;
     }
 
     .w3-button.pink {
@@ -63,9 +64,6 @@
 
 <!-- Navbar -->
 <div class="w3-bar w3-top w3-large w3-padding">
-  <a href="#home" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-home"></i> Home</a>
-  <a href="#mission" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-heart"></i> Mission</a>
-  <a href="index.html" class="w3-bar-item w3-button w3-hover-white"><i class="fa fa-quote-left"></i> Quotes</a>
 </div>
 
 <!-- Hero Section -->
