--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     .hero-section {
-      background-image: url('https://t4.ftcdn.net/jpg/02/75/71/89/360_F_275718943_ORKB0mXTEoa3YuKB0Ng8hBJPmB5JXxFl.jpg');
+      background-image: url('homepage.png');
       background-size: cover;
       background-position: center;
       height: 100vh;
