--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     Quotivate is focused on positivity, creativity, and daily inspiration — not chaos.<br>
     Simple, motivating, and built for you.
   </p>
-  <a href="index.html" class="w3-button pink w3-margin-top">Get Inspired</a>
+  <a href="quotes.html" class="w3-button pink w3-margin-top">Get Inspired</a>
 </section>
 
 <!-- Decorative Section -->
